# trouble

./: .gitignore  README.md  board.py  color.py  conftest.py  game.py  peg.py  pyproject.toml  trouble.py
models/: 3_layer_model.keras
models/10k_games_3_layer_model/: ThreeLayerModel.keras
models/3_layer_model/: ThreeLayerModel.keras
sample_game_states/: 6_roll_near_game_end_with_extra_turn_option.json  6_roll_with_extra_turn_option.json  bump_other_player_option.json
tests/: mock_action_selector.py  mock_die.py  test_board.py  test_color.py  test_default_action_selector.py  test_default_die.py  test_die.py  test_game.py  test_peg.py  test_random_action_selector.py
tests/actions/: test_move_action.py  test_move_to_board_action.py
tests/evaluation/: test_game_state_repository.py  test_model_based_action_selector.py
tests/gameplay/: mock_action_selector.py  test_default_die.py  test_game.py  test_random_action_selector.py
tests/generation/: test_game_document.py  test_game_repository.py
tests/models/: test_game_document.py
tests/repositories/: test_game_repository.py  test_model_repository.py
tests/training/: test_encoded_game_state.py  test_encoded_turn_state.py  test_model.py  test_model_repository.py  test_trainer.py
trouble/: __init__.py  action_selector.py  board.py  color.py  default_action_selector.py  default_die.py  game.py  peg.py  random_action_selector.py
trouble/actions/: __init__.py  action.py  move_action.py  move_to_board_action.py  none_action.py
trouble/evaluation/: __init__.py  game_state_repository.py  (+1 more)
(+28 files in other folders)
