[project]
name = "trouble"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beanie (>=1.29.0,<2.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mongomock-motor = "^0.0.35"
pytest-asyncio = "^0.25.3"
pytest-randomly = "^3.16.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
